[package]
name = "xorcism"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
edition = "2018"


[dependencies]
atty =       { version = "0.2.14", optional = true }
base64 =     { version = "0.13.0", optional = true }
color-eyre = { version = "0.5.6",  optional = true, default-features = false }
structopt =  { version = "0.3.20", optional = true }

[features]
default = [ "bin" ]
bin = [
    "atty",
    "base64",
    "color-eyre",
    "structopt",
]
debug = [ "bin" ]
